--- a/_posts/2023-02-14-INITIUM-土耳其-叙利亚地震现场-救援迟滞-协调失当-阻止采访-土耳其的灾后乱局.html
+++ b/_posts/2023-02-14-INITIUM-土耳其-叙利亚地震现场-救援迟滞-协调失当-阻止采访-土耳其的灾后乱局.html
@@ -8,8 +8,8 @@ tags: blog
 author: 特约撰稿人 Daniel Ceng 发自土耳其哈泰省
 ---
 
-<p>「我表明记者身份，展示护照和记者证，但土耳其警方依然指控我“为美国或其他国家进行间谍行为”。」</p><p>特约撰稿人 Daniel Ceng 发自土耳其哈泰省</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230215-international-southeast-turkey-after-earthquake/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/d54da9050f9f42a5884a4cf331c61322.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p>2月8日，在土耳其与叙利亚发生7.8级地震后第二天，我在伊斯坦堡机场准备飞往阿德纳（Adana）。</p>
+<p>「我表明记者身份，展示护照和记者证，但土耳其警方依然指控我“为美国或其他国家进行间谍行为”。」</p><p>特约撰稿人 Daniel Ceng 发自土耳其哈泰省</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230215-international-southeast-turkey-after-earthquake/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/d54da9050f9f42a5884a4cf331c61322.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="土耳其地震重灾区哈泰，居民在倒塌的住宅外观看搜救行动。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">土耳其地震重灾区哈泰，居民在倒塌的住宅外观看搜救行动。<span class="credit">Daniel Ceng摄</span></figcaption></figure><p>2月8日，在土耳其与叙利亚发生7.8级地震后第二天，我在伊斯坦堡机场准备飞往阿德纳（Adana）。</p>
 <p>这场地震让广阔的土耳其东南部几乎夷为平地。它的震央在卡拉曼马拉斯省（Kahramanmaras），除了区域大城市安济加泰普（Gaziantep），灾区还包括偏僻省份和可达度不高的城市与小镇，包括帕扎尔吉克（Pazarcik）、奥斯曼尼耶（Osmaniye)、阿德纳（Adana）等地。加上这次的震源深度仅17.9公里，属极浅层地震，破坏力极其强大。地震发生时是凌晨4点17分，当地人多来不及起床逃生，或是在逃离过程中被坍塌的建筑物活埋。</p>
 <p>同日下午1时24分，距卡拉曼马拉斯省80公里的埃尔比斯坦（Elbistan）再发生了7.5级、震源深度仅10公里的地震。在这么短的时间内发生两次7级以上地震，令许多人措手不及。</p>
 <p>此前，在台北往土耳其的班机上，我遇到土耳其人Yagiz。在台湾新竹市居住将近7年的他说，他的父亲住在震央中心附近、破坏程度最为灾难性的哈泰省（Hatay），事发时正在熟睡。房屋在剧烈摇晃中倒塌，他被活埋在瓦砾下。Yagiz的母亲与姐姐活下来了，但父亲音信全无。</p>
