--- a/_posts/2023-02-14-INITIUM-沈有忠-2024总统大选-民进党-党政分离-与国民党人选的-错位-困境.html
+++ b/_posts/2023-02-14-INITIUM-沈有忠-2024总统大选-民进党-党政分离-与国民党人选的-错位-困境.html
@@ -17,44 +17,44 @@ author: 沈有忠
 </blockquote>
 <p>首先分析执政的民进党。民进党在2022年地方选举溃败之后，蔡英文总统第一时间辞去兼任的党主席职位，但留任苏贞昌内阁。在败选后的第一时间决定党务改组、内阁留任，等于确立了未来党政分离的方向。后续民进党在郑文灿负责下，召开一系列败选检讨会议，并提出了败选检讨报告书，但并没有太大幅度的改革作为。因此，呼吁内阁改组与党务改革的检讨声浪排山倒海而来。<br><br>最终在内阁的部分，蔡总统在农历年假期间终于宣布改组，由前副总统陈建仁啣命组阁。虽然陈建仁曾任副总统，但长期不具有党籍，也不具深厚的党内实力，被视为蔡总统或英系的人马，任命陈建仁组阁也被视为蔡总统在内阁延续其政治权力的象征。</p>
 <p>在党务改革的部分，蔡总统宣布辞去党主席之后，副总统赖清德旋即宣布参选。党内没有其他挑战者，成为同额竞选。可以说是定尊于一的情况下，副总统赖清德顺利当选，成为继任的党主席，主导党务改革，并且掌握了对2024年总统与立委党内提名的权力。蔡总统持续领导内阁，主导最后一年的施政方针；赖副总统则是接任党务改革与领导党机器投入2024大选，民进党在蔡英文总统最后一年任期内，“党政分离”的格局正式形成。</p>
-<p>从宪政体制的观点来看，台湾从1997年第四次修宪后，总统依其意志任命行政院长，透过行政院长掌握领导政务的权力。此外，两党在惯例上也由总统兼任党主席，直接领导政党，形成了总统主导下的党政合一的权力结构。在总统同时领导党政、党政合一的情况下，以党领政或是以党辅政，并没有太大的差异。</p>
-<p>然而，在陈水扁、马英九两位总统的例子上来看，两位总统在第二任期的最后一年，不约而同的因为地方选举的溃败，辞去党主席并且进入跛脚，党政之间的关系就跟著提前进入权力解构的过程。</p>
-<p>党的部分，继任党主席的人，就成为代表该党参选总统的候选人，领导政党并操盘总统选举。2007年民进党是谢长廷扮演这个角色，2015年的国民党则是朱立伦。政的部分在2007、以及2015都是进入看守状态，民进党是张俊雄回锅第二任行政院长，国民党任命当时党内声望不高，类似于技术官僚的张善政组阁。</p>
-<p>按照2007的民进党与2015的国民党两次经验来看，最后隔年的总统大选都是发生政党轮替的结果。意味著总统跛脚后进入党政分离的情况，政的部分，内阁因为进入看守状态，难以发挥行政优势；从党的角度来看，总统候选人即使领导党务，如果没有行政优势提供竞选的议题与弹药，也不容易顺利继任。</p>
-<p>此次民进党在地方选举败选后，党政权力结构分两个阶段出现重组，似乎又重演了2007与2015年的戏码。蔡英文总统在败选当晚宣布辞去党主席，赖清德很快宣布参选，党务的权力交替果断迅速。然而，在政务的部分，蔡英文先是宣布留任苏贞昌，引发舆论一片哗然。后续可以说是在社会舆论压力下，被动的宣布内阁改组，正式任命陈建仁组阁。然而，组阁议题延宕一段时日，加上最后众多阁员留任的情况下，这次的改组幅度不算大，目前也未能看到透过内阁改组带给民进党焕然一新的气象。</p>
-<p>不仅如此，蔡英文总统在内阁改组前先是透过国安高层会议议决了最后一年的施政方向，后又持续掌握内阁人事的主导权，意味著总统将延续领导政务的权力。在党政分离的情况下，蔡总统在内阁改组后维持领导政务，赖清德的党务改革反而成为边缘化的议题，民进党终究无法竖立大破大立的观感。而赖清德要如何主导接下来的选战，光是在民进党内就可以说是充满挑战。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/074e36bd36054c89b190a81778e3bece.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年1月27日，台北，总统蔡英文举行的新闻发布会上，即将上任的行政院院长陈建仁，在即将卸任的行政院院长苏贞昌旁讲话。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2023年1月27日，台北，总统蔡英文举行的新闻发布会上，即将上任的行政院院长陈建仁，在即将卸任的行政院院长苏贞昌旁讲话。<span class="credit">摄：Ann Wang/Reuters/达志影像</span></figcaption></figure>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
-<h2>党政不同步，党魁与阁揆互补成挑战</h2>
-<blockquote>
-<p>如果党务与政务无法协调，总统与立委选举必然陷入混乱，就好比选定了战士，却没有适当的战场或是后勤支援可以发挥一样。</p>
-</blockquote>
-<p>以当前的趋势来看，党政分离已经成为定局，在未来这一年最大的挑战，在于赖清德主导的党务改革与党机器，和陈建仁领导的内阁，是否能够充分沟通，达到党政虽不同步，但能互补的状态。</p>
-<p>例如，赖清德将接续负责民进党的立委提名、竞选团队组成、竞选议题设定、甚至是总统的提名或是初选办法制订等。而陈建仁则是负责领导内阁，在选举期间不只希望稳住民进党的社会基础，更希望能开拓新局，提供总统选举与立委选举所需要的弹药。如果党务与政务无法协调，总统与立委选举必然陷入混乱，就好比选定了战士，却没有适当的战场或是后勤支援可以发挥一样。</p>
-<p>除了党政分离在选举期间可能出现的风险以外，民进党另一个要面对的问题，就是如何定位蔡英文总统在最后一年任期的角色。以目前的发展趋势来看，两岸、外交等议题，仍是蔡总统主导。甚至陈建仁组阁以后，施政方针和重大内政决策，蔡总统也都在过程中扮演拍版定案的角色。这意味著蔡总统并没有打算提前进行权力交接，拒绝跛脚的情况下，蔡英文总统将会是赖清德竞选2024总统大位最大的党内变数。</p>
-<p>再回到内阁改组的议题来看，此次内阁改组，阁员留任的比例非常高，改组幅度不大，带来耳目一新的亮点其实非常少。尤其政务次长的部分，在1月30日公布的24个部会中，仅侨委会、客委会的政务次长出现更替。民进党向来重视拔擢年青世代，世代交替也是民进党被视为胜于国民党的一项优势，此次改组却没有见到太多年青世代的入阁，连政务次长都倾向留任。几乎没有发挥以往人才培育与世代交替的优势。</p>
-<p>因此，陈建仁领导的新内阁一上路，就被定位为稳定政局，以及政策的延续，而非开创与突破。此次因地方选举挫败而改组，过程已经延宕且具有争议，改组结果又是原阁员大幅留任，能否真的带来新气象，让赖清德领导党务，竞选2024总统时有突破性的政绩可以发挥，目前看来深具挑战。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/3f409b4f902e4b3cbe479c97f5b667fd.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月22日，国民党新北市长候选人侯友宜扫街拜票。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月22日，国民党新北市长候选人侯友宜扫街拜票。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
-<h2>朱立伦、郭台铭与侯友宜的“错位”困境</h2>
-<blockquote>
-<p>所谓的错位，就是占据最适合职位参选总统者，声势最低；而参选总统正当性最低者，民调与声望却最高。</p>
-</blockquote>
-<p>接著来看国民党。国民党在地方选举胜选之后声势大涨，一时之间新北市长侯友宜、党主席朱立伦、甚至鸿海集团创办人郭台铭都被点名为可以代表国民党角逐2024总统大位的人选。尽管大环境看似有利，但对比民调与声势，却出现“错位”的困境。所谓的错位，就是占据最适合职位参选总统者，声势最低；而参选总统正当性最低者，民调与声望却最高。</p>
-<figure class="widget-wiki"><h3>换柱风波</h3><figcaption>2015年，洪秀柱成为国民党初选中唯一登记参选隔年总统大选的候选人，以高民调通过初选，并于国民党全国代表大会无异议通过。但随后，国民党中央委员会召开临时全国代表大会，决定废止洪秀柱提名，改征召时任新北市长朱立伦参选总统。洪秀柱成为史上第一位通过党内初选，却又被政党撤销提名的参选人。</figcaption></figure>
+ 
+ 
+ 
+ 
 
-<p>以目前几位可能的人选来看，朱立伦是现任的党主席，又有带领国民党赢得2022年地方选举的战功，客观的来说，理所当然的是2024年参选总统最适合的人选。但朱立伦虽然占据最适合的位置，却不是支持度最高的人选，在各种交叉比较下，朱立伦的胜选机率反而是最低的。此外，由于朱立伦在2016年本身是“换柱”风波的主角，加上党内的立场也被深蓝支持者所质疑，如果2024年再度参选，对内也要先说服深蓝支持者。声势低、难以安抚深蓝，是现任主席朱立伦的困境。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2019/06/9983a0077d244a8897c9d4f6b573a12d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年4月30日，台北“突破困境・迎接挑战——重振台湾竞争力会议”，郭台铭在圆桌论坛台上。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2019年4月30日，台北“突破困境・迎接挑战——重振台湾竞争力会议”，郭台铭在圆桌论坛台上。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
+ 
+ 
 
-<p>再看鸿海集团创办人郭台铭，从国民党的角度来看，比起朱立伦虽然有较高的支持度，但问题在于郭台铭已经退出国民党，不具有党籍的身份。尽管回锅入党或是透过量身订做来设计提名办法，弄出一个“郭台铭条款”都只是技术性问题，但终究在公平性的问题上会遭到内部反对意见的质疑。如果郭台铭用无党籍身份参选，也只是形式上的解套之一。由国民党的人士担任副手，恐怕也难以说服一部份国民党的支持者。</p>
-<p>最后，是声量与支持度最高的现任新北市长侯友宜。侯友宜在2022年以极大幅度的优势顺利连任新北市长，选后从胜选感言到后续许多公开场合的发言，都展现出问鼎2024的企图心，民调也显示为国民党内最有胜选机会的候选人。</p>
-<p>但最大的障碍，就是刚刚完成连任、成为现任新北市长的身份。虽然目前是侯友宜的第二任期，状况不同于2020年刚选上高雄市长的韩国瑜，但韩国瑜“落跑市长”成为败选原因之一，甚至遭到罢免的印记，仍旧历历在目，成为侯友宜不得不慎思考量的困境。</p>
-<p>除此之外，侯友宜在党内或是面对其他政党，也都有挑战必须面对。对内在于侯友宜的本土色彩，加上被陈水扁于总统任内拔擢为警政署长的历史，甚至被深蓝支持者贴上“蓝皮绿骨”的标签。对外则是浓烈的本土特性，欠缺足够的国际背景与视野，也容易成为选举时遭到其他政党攻击的软肋。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/b2be22295fcc4911b85518d2f9dbde92.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年10月13日，台北，朱立伦出席国民党举办的国庆酒会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年10月13日，台北，朱立伦出席国民党举办的国庆酒会。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
+ 
+ 
+ 
+ 
+ 
 
-<p>朱立伦日前谈及国民党2024年的提名方针，指出“坚持挺对的人、走对的路、团结一致”，这套原则没有把“最强的人”、“最有胜选机会的人”放成提名条件，充满想像。所谓“对的人”、“对的路”，可以解读为最能代表国民党的立场与意识形态的候选人，而非最具胜选把握的候选人。最后何制订提名办法？是否用现任条款或是其他方式排除侯友宜？或是制订接纳／排除郭台铭的条款？都是国民党接下来马上要面对的茶壶里的风暴。</p>
-<p>2022年地方选举，催动了民进党、国民党的权力重组。民进党面临的，不是人选问题，赖清德几乎确定代表民进党参选，但党政分工的结构性问题却成为严峻的挑战；国民党面对的，则是如何解决错位的人选问题，以及如何化解提名或初选可能造成的分裂危机。不管是党政的权力结构，或是错位的困境，都属于两党内部的问题。2024年的总统选举，或许上半年过后，看那个政党能够顺利解决自己的困境，就能在下半年与其他政党的竞争上抢得先机了。</p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
+ 
+<p>从宪政体制的观点来看，台湾从1997年第四次修宪后，总统依其意志任命行政院长，透过行政院长掌握领导政务的权力。此外，两党在惯例上也由总统兼任党主席，直接领导政党，形成了总统主导下的党政合一的权力结构。在总统同时领导党政、党政合一的情况下，以党领政或是以党辅政，并没有太大的差异。</p><p>然而，在陈水扁、马英九两位总统的例子上来看，两位总统在第二任期的最后一年，不约而同的因为地方选举的溃败，辞去党主席并且进入跛脚，党政之间的关系就跟著提前进入权力解构的过程。</p><p>党的部分，继任党主席的人，就成为代表该党参选总统的候选人，领导政党并操盘总统选举。2007年民进党是谢长廷扮演这个角色，2015年的国民党则是朱立伦。政的部分在2007、以及2015都是进入看守状态，民进党是张俊雄回锅第二任行政院长，国民党任命当时党内声望不高，类似于技术官僚的张善政组阁。</p><p>按照2007的民进党与2015的国民党两次经验来看，最后隔年的总统大选都是发生政党轮替的结果。意味著总统跛脚后进入党政分离的情况，政的部分，内阁因为进入看守状态，难以发挥行政优势；从党的角度来看，总统候选人即使领导党务，如果没有行政优势提供竞选的议题与弹药，也不容易顺利继任。</p><p>此次民进党在地方选举败选后，党政权力结构分两个阶段出现重组，似乎又重演了2007与2015年的戏码。蔡英文总统在败选当晚宣布辞去党主席，赖清德很快宣布参选，党务的权力交替果断迅速。然而，在政务的部分，蔡英文先是宣布留任苏贞昌，引发舆论一片哗然。后续可以说是在社会舆论压力下，被动的宣布内阁改组，正式任命陈建仁组阁。然而，组阁议题延宕一段时日，加上最后众多阁员留任的情况下，这次的改组幅度不算大，目前也未能看到透过内阁改组带给民进党焕然一新的气象。</p><p>不仅如此，蔡英文总统在内阁改组前先是透过国安高层会议议决了最后一年的施政方向，后又持续掌握内阁人事的主导权，意味著总统将延续领导政务的权力。在党政分离的情况下，蔡总统在内阁改组后维持领导政务，赖清德的党务改革反而成为边缘化的议题，民进党终究无法竖立大破大立的观感。而赖清德要如何主导接下来的选战，光是在民进党内就可以说是充满挑战。</p><p><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/074e36bd36054c89b190a81778e3bece.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年1月27日，台北，总统蔡英文举行的新闻发布会上，即将上任的行政院院长陈建仁，在即将卸任的行政院院长苏贞昌旁讲话。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2023年1月27日，台北，总统蔡英文举行的新闻发布会上，即将上任的行政院院长陈建仁，在即将卸任的行政院院长苏贞昌旁讲话。<span class="credit">摄：Ann Wang/Reuters/达志影像</span></figcaption><p></p><p>党政不同步，党魁与阁揆互补成挑战</p><p>
+</p><p>如果党务与政务无法协调，总统与立委选举必然陷入混乱，就好比选定了战士，却没有适当的战场或是后勤支援可以发挥一样。</p>
+<p></p><p>以当前的趋势来看，党政分离已经成为定局，在未来这一年最大的挑战，在于赖清德主导的党务改革与党机器，和陈建仁领导的内阁，是否能够充分沟通，达到党政虽不同步，但能互补的状态。</p><p>例如，赖清德将接续负责民进党的立委提名、竞选团队组成、竞选议题设定、甚至是总统的提名或是初选办法制订等。而陈建仁则是负责领导内阁，在选举期间不只希望稳住民进党的社会基础，更希望能开拓新局，提供总统选举与立委选举所需要的弹药。如果党务与政务无法协调，总统与立委选举必然陷入混乱，就好比选定了战士，却没有适当的战场或是后勤支援可以发挥一样。</p><p>除了党政分离在选举期间可能出现的风险以外，民进党另一个要面对的问题，就是如何定位蔡英文总统在最后一年任期的角色。以目前的发展趋势来看，两岸、外交等议题，仍是蔡总统主导。甚至陈建仁组阁以后，施政方针和重大内政决策，蔡总统也都在过程中扮演拍版定案的角色。这意味著蔡总统并没有打算提前进行权力交接，拒绝跛脚的情况下，蔡英文总统将会是赖清德竞选2024总统大位最大的党内变数。</p><p>再回到内阁改组的议题来看，此次内阁改组，阁员留任的比例非常高，改组幅度不大，带来耳目一新的亮点其实非常少。尤其政务次长的部分，在1月30日公布的24个部会中，仅侨委会、客委会的政务次长出现更替。民进党向来重视拔擢年青世代，世代交替也是民进党被视为胜于国民党的一项优势，此次改组却没有见到太多年青世代的入阁，连政务次长都倾向留任。几乎没有发挥以往人才培育与世代交替的优势。</p><p>因此，陈建仁领导的新内阁一上路，就被定位为稳定政局，以及政策的延续，而非开创与突破。此次因地方选举挫败而改组，过程已经延宕且具有争议，改组结果又是原阁员大幅留任，能否真的带来新气象，让赖清德领导党务，竞选2024总统时有突破性的政绩可以发挥，目前看来深具挑战。</p><p><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/3f409b4f902e4b3cbe479c97f5b667fd.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月22日，国民党新北市长候选人侯友宜扫街拜票。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年11月22日，国民党新北市长候选人侯友宜扫街拜票。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>朱立伦、郭台铭与侯友宜的“错位”困境</p><p>
+</p><p>所谓的错位，就是占据最适合职位参选总统者，声势最低；而参选总统正当性最低者，民调与声望却最高。</p>
+<p></p><p>接著来看国民党。国民党在地方选举胜选之后声势大涨，一时之间新北市长侯友宜、党主席朱立伦、甚至鸿海集团创办人郭台铭都被点名为可以代表国民党角逐2024总统大位的人选。尽管大环境看似有利，但对比民调与声势，却出现“错位”的困境。所谓的错位，就是占据最适合职位参选总统者，声势最低；而参选总统正当性最低者，民调与声望却最高。</p><p></p><h3>换柱风波</h3><figcaption>2015年，洪秀柱成为国民党初选中唯一登记参选隔年总统大选的候选人，以高民调通过初选，并于国民党全国代表大会无异议通过。但随后，国民党中央委员会召开临时全国代表大会，决定废止洪秀柱提名，改征召时任新北市长朱立伦参选总统。洪秀柱成为史上第一位通过党内初选，却又被政党撤销提名的参选人。</figcaption><p></p><p>以目前几位可能的人选来看，朱立伦是现任的党主席，又有带领国民党赢得2022年地方选举的战功，客观的来说，理所当然的是2024年参选总统最适合的人选。但朱立伦虽然占据最适合的位置，却不是支持度最高的人选，在各种交叉比较下，朱立伦的胜选机率反而是最低的。此外，由于朱立伦在2016年本身是“换柱”风波的主角，加上党内的立场也被深蓝支持者所质疑，如果2024年再度参选，对内也要先说服深蓝支持者。声势低、难以安抚深蓝，是现任主席朱立伦的困境。</p><p><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2019/06/9983a0077d244a8897c9d4f6b573a12d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年4月30日，台北“突破困境・迎接挑战——重振台湾竞争力会议”，郭台铭在圆桌论坛台上。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2019年4月30日，台北“突破困境・迎接挑战——重振台湾竞争力会议”，郭台铭在圆桌论坛台上。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>再看鸿海集团创办人郭台铭，从国民党的角度来看，比起朱立伦虽然有较高的支持度，但问题在于郭台铭已经退出国民党，不具有党籍的身份。尽管回锅入党或是透过量身订做来设计提名办法，弄出一个“郭台铭条款”都只是技术性问题，但终究在公平性的问题上会遭到内部反对意见的质疑。如果郭台铭用无党籍身份参选，也只是形式上的解套之一。由国民党的人士担任副手，恐怕也难以说服一部份国民党的支持者。</p><p>最后，是声量与支持度最高的现任新北市长侯友宜。侯友宜在2022年以极大幅度的优势顺利连任新北市长，选后从胜选感言到后续许多公开场合的发言，都展现出问鼎2024的企图心，民调也显示为国民党内最有胜选机会的候选人。</p><p>但最大的障碍，就是刚刚完成连任、成为现任新北市长的身份。虽然目前是侯友宜的第二任期，状况不同于2020年刚选上高雄市长的韩国瑜，但韩国瑜“落跑市长”成为败选原因之一，甚至遭到罢免的印记，仍旧历历在目，成为侯友宜不得不慎思考量的困境。</p><p>除此之外，侯友宜在党内或是面对其他政党，也都有挑战必须面对。对内在于侯友宜的本土色彩，加上被陈水扁于总统任内拔擢为警政署长的历史，甚至被深蓝支持者贴上“蓝皮绿骨”的标签。对外则是浓烈的本土特性，欠缺足够的国际背景与视野，也容易成为选举时遭到其他政党攻击的软肋。</p><p><a class="image" href="https://theinitium.com/article/20230215-opinion-taiwan-2024-presidential-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/b2be22295fcc4911b85518d2f9dbde92.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年10月13日，台北，朱立伦出席国民党举办的国庆酒会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年10月13日，台北，朱立伦出席国民党举办的国庆酒会。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>朱立伦日前谈及国民党2024年的提名方针，指出“坚持挺对的人、走对的路、团结一致”，这套原则没有把“最强的人”、“最有胜选机会的人”放成提名条件，充满想像。所谓“对的人”、“对的路”，可以解读为最能代表国民党的立场与意识形态的候选人，而非最具胜选把握的候选人。最后何制订提名办法？是否用现任条款或是其他方式排除侯友宜？或是制订接纳／排除郭台铭的条款？都是国民党接下来马上要面对的茶壶里的风暴。</p><p>2022年地方选举，催动了民进党、国民党的权力重组。民进党面临的，不是人选问题，赖清德几乎确定代表民进党参选，但党政分工的结构性问题却成为严峻的挑战；国民党面对的，则是如何解决错位的人选问题，以及如何化解提名或初选可能造成的分裂危机。不管是党政的权力结构，或是错位的困境，都属于两党内部的问题。2024年的总统选举，或许上半年过后，看那个政党能够顺利解决自己的困境，就能在下半年与其他政党的竞争上抢得先机了。</p>
