--- a/_posts/2023-02-15-INMEDIA-大嶼山-兩隧一橋-今年展開可行性研究-料2025年完成.html
+++ b/_posts/2023-02-15-INMEDIA-大嶼山-兩隧一橋-今年展開可行性研究-料2025年完成.html
@@ -9,10 +9,13 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/202302154.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>土木工程拓展署去年中完成《<a href="https://www.cedd.gov.hk/filemanager/tc/content_961/26/CE8_2017%20-%20Executive%20Summary_Chi.pdf">檢視大嶼山的交通運輸基建 網絡及旅客接待能力的研究 – 可行性研究</a>》，倡進一步研究「兩隧一橋」，民建聯陳學鋒今日在立法會提出口頭質詢跟進。發展局局長甯漢豪表示，署方將於今年3月展開可行性研究，料2025年中完成。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/746q75jw85" title="無標題"><img src="https://live.staticflickr.com/65535/52689474052_c679b28c33_b.jpg" width="1024" alt="無標題" /></a><br /><em>民建聯陳學鋒</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1y0n28VN41" title="無標題"><img src="https://live.staticflickr.com/65535/52690409170_c664b7e598_b.jpg" width="1024" alt="無標題" /></a><br /><em>發展局局長甯漢豪</em></p>
 <p>發展局局長甯漢豪表示，去年土拓署的研究已向立法會及<a href="https://www.inmediahk.net/node/%E8%A6%8F%E5%8A%83/%E6%94%BF%E5%BA%9C%E7%A0%94%E9%9A%A7%E9%81%93%E6%8E%A5%E9%80%9A%E6%A2%85%E7%AA%A9-%E6%88%96%E5%8F%AA%E9%99%90%E5%85%AC%E5%85%B1%E4%BA%A4%E9%80%9A%E5%B7%A5%E5%85%B7%E4%BD%BF%E7%94%A8-%E9%84%89%E4%BA%8B%E4%B8%8D%E6%BB%BF">區議會</a>匯報。研究亦認同東涌道是唯一通道，故建議分別在大嶼山東部及西部加強連接。分別是在東面擬興建新行車隧道連接梅窩及愉景灣或小蠔灣，西面則建議興建石壁及大澳的2公里長的羌山隧道，或改用兩座分別長約350米的高架橋取代現時一段連接石壁和大澳道多彎狹窄的羗山道。中部方面，則會研究重新使用伯公坳至長沙約 2.5公里舊東涌道。甯漢豪指土木工程拓展署今年3月將展開可行性研究，揀選最合適的組合，預料在2025年中完成。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/H665844h1q" title="螢幕截圖 2022-07-18 上午9.32.38"><img src="https://live.staticflickr.com/65535/52223446971_7d4ce80099_b.jpg" width="1024" alt="螢幕截圖 2022-07-18 上午9.32.38" /></a></p>
 <p>至於梅窩至大澳的連接，甯漢豪指大嶼山南部大部分為鄉郊及具保育價值，考慮到大嶼山容量考慮，故將南大嶼道路劃為封閉道路，而目前每日流量佔容量一半或以下，認為暫時未有足夠理據興建上述方案外其他交通基建或環島道路。</p>
 <p>民建聯黃俊碩稱，大澳「人山人海」，問到會否重新評估需求。甯漢豪則稱往來大澳的短程水路路線已恆常化，署方亦會繼續進行區內道路小型改善工程。至於東涌道，她指改善工程在2009年完工後，再進行大型優化的可能性不大，故集中研究東面的連接。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4Gq4iQ7013" title="無標題"><img src="https://live.staticflickr.com/65535/52689474217_d239364130_b.jpg" width="1024" alt="無標題" /></a><br /><em>民建聯黃俊碩</em></p>
 <p>林筱魯提到，嶼南路亦有單車及牛「與汽車爭路」。運輸及物流局副局長廖振新表示，當局在區內道路多處進行改善小型工程。他又提到，大部分在南大嶼居住及營商的居民皆獲發許可證，目前最大限制是對區外人士。當局認為不應讓太多車輛駛進生態敏感地區，而「大嶼山自駕遊」計劃亦有少量許可證供申請，形容為「小小平衡」。</p>
 <p>根據《研究》，當局曾考慮其他不同方案。在西面大澳方面，曾考慮以高架橋連接東涌、穿過山嶺興建彌勒山隧道、將東澳步道改為車路及連接港珠澳大橋等。惟《研究》認為分別有較大工程上的困難，亦涉及影響保育區及私人土地，以及須修改禁區法例等。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R8ryL5H5HR" title="螢幕截圖 2023-02-15 下午12.48.35"><img src="https://live.staticflickr.com/65535/52690358460_cd842135da_b.jpg" width="1024" alt="螢幕截圖 2023-02-15 下午12.48.35" /></a></p>
