--- a/_posts/2023-02-15-INMEDIA-初選47人案-區諾軒-九西協調岑子杰質疑否決財案-稱支持民生議案如全民退保.html
+++ b/_posts/2023-02-15-INMEDIA-初選47人案-區諾軒-九西協調岑子杰質疑否決財案-稱支持民生議案如全民退保.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/foot.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>47人涉組織及參與民主派初選，16人否認「串謀顛覆國家政權」罪，今（15日）踏入審訊第8天。認罪被告區諾軒續就九龍西的初選協調會議作供，他憶述其中一名與會者張崑陽提及戴耀廷的文章〈真攬炒十步 這是香港宿命〉，戴重申「參選立法會要有心理準備做唔到4年」。張崑陽又表示支持否決財政預算案，惟岑子杰提出質疑，指「講抗爭，邊有人及得上社民連」，但他仍需支持民生議案包括全民退休保障。區諾軒又表示：「當我睇到呢篇文章，曾經同佢（戴耀廷）講，我話佢嘅想法太瘋狂。」</p>
+<img src="https://www.inmediahk.net/files/column_images/foot.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>47人涉組織及參與民主派初選，16人否認「串謀顛覆國家政權」罪，今（15日）踏入審訊第8天。認罪被告區諾軒續就九龍西的初選協調會議作供，他憶述其中一名與會者張崑陽提及戴耀廷的文章〈真攬炒十步 這是香港宿命〉，戴重申「參選立法會要有心理準備做唔到4年」。張崑陽又表示支持否決財政預算案，惟岑子杰提出質疑，指「講抗爭，邊有人及得上社民連」，但他仍要支持民生議案包括全民退休保障。區諾軒又表示：「當我睇到呢篇文章，曾經同佢（戴耀廷）講，我話佢嘅想法太瘋狂。」</p>
 <p><strong>政治聯繫「尷尬」者能否參選？ 戴：只要認同「五大訴求」便可</strong></p>
 <p>區諾軒下午就九龍西協調會議作供。他指首兩次會議分別於2020年3月24日及4月26日舉行，首次會議出席者除了他之外，還有戴耀廷、何啟明、劉偉聰、馮達浚、岑子杰、黃碧雲助理、毛孟靜助理、油尖旺區議會主席林健文及前立法會議員劉小麗。社區前進的代表有出席第一次會議，至於趙家賢則不肯定有否出席。區交代上述各人的政治聯繫後，再表示：「依家補充返，有個人都有出席兩次會議：張崑陽。」</p>
 <p>區諾軒憶述，會議曾討論的議題包括政治聯繫較「尷尬」的人，例如新思維的狄志遠，是否可以參與初選。傳譯主任一度翻譯「尷尬」為「embarrassed」，惟區諾軒隨即指正應譯為「ambiguous」。區續指，戴耀廷當時回答是，「只要認同『五大訴求』就可以參選。」</p>
@@ -18,7 +18,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/hQpBF5j484" title="C3727187-065D-42EE-8704-E752B6BCD61F"><img src="https://live.staticflickr.com/65535/50139321808_43c5312e89_z.jpg" alt="C3727187-065D-42EE-8704-E752B6BCD61F" /></a><br /><em>左起：岑子杰、毛孟靜、何啟明、張崑陽</em></p>
 <p><strong>區憶述岑子杰質疑否決財案 因需支持民生議案</strong></p>
 <p>至於第二次協調會議，區諾軒指出席人士與首次會議相若，其中劉小麗沒有出席。會上曾討論邀請區議員辦事處和「黃店」作為票站，又集中討論應派多少張名單參選立法會，與會者認為應先投票，再於初選後討論推薦出選名單數目，並以5席為目標。</p>
-<p>區又指，張崑陽曾提及有留意戴耀廷的文章〈真攬炒十步 這是香港宿命〉，引發戴在該會議重申文章理念，認為「參選立法會要有心理準備做唔到4年」。張崑陽回應他支持否決財政預算案，惟社民連岑子杰即提出質疑，稱：「講抗爭，邊有人及得上社民連」，但他亦需要支持某些民生議案，例如全民退休保障，在延伸庭的黃之鋒聞言一度發笑。惟區對其他人有否表達意見沒有印象。傳譯主任打算翻譯「全民退休保障」一字時遲疑數秒，法官見狀即指出「universal retirement scheme」。</p>
+<p>區又指，張崑陽曾提及有留意戴耀廷的文章〈真攬炒十步 這是香港宿命〉，引發戴在該會議重申文章理念，認為「參選立法會要有心理準備做唔到4年」。張崑陽回應他支持否決財政預算案，惟社民連岑子杰即提出質疑，稱：「講抗爭，邊有人及得上社民連」，但他亦要支持某些民生議案，例如全民退休保障，在延伸庭的黃之鋒聞言一度發笑。惟區對其他人有否表達意見沒有印象。傳譯主任打算翻譯「全民退休保障」一字時遲疑數秒，法官見狀即指出「universal retirement scheme」。</p>
 <p><strong>區諾軒：「攬炒十步」想法「太瘋狂」</strong></p>
 <p>區指就着會議不同看法，戴耀廷再重申他使用「積極運用」字眼的用意，「由此可見，佢用呢個字眼處理會議上面唔同觀點。」控方其後問及，區有否看過〈真攬炒十步〉一文，區指在文章刊出不久後讀過，戴亦曾向他講過一次，並補充「喺度我想加個註腳」：「當我睇到呢篇文章，曾經同佢（戴耀廷）講，我話佢嘅想法太瘋狂。」</p>
 <p><strong>列席認罪被告全於延伸庭被告欄就坐 </strong></p>
