--- a/_posts/2023-02-16-INMEDIA-申訴專員批食環打擊阻街巡查多執法少-促引入累進式罰款.html
+++ b/_posts/2023-02-16-INMEDIA-申訴專員批食環打擊阻街巡查多執法少-促引入累進式罰款.html
@@ -25,5 +25,10 @@ author: 獨媒報導
 <p>另外，趙慧賢指，環保署近年對非法棄置建築廢物的巡查數字不斷上升，同期所接獲的投訴則不斷下降，反映工作有成效。不過在發泡膠箱問題方面，署方仍然與相關部門尋求可行的解決方法。</p>
 <p><strong>部門權責不清拒收個案 趙慧賢：各說各話、費時失事</strong></p>
 <p>至於在跨部門聯合行動方面，公署發現，各區民政處的統籌行動次數有頗大差異，部份民政處在過去幾年從未統籌過任何聯合行動，有個案更顯示即使民政處嘗試統籌，但因部門之間的權責爭議而無法成事。公署認為，民政總署應督導民政處更積極介入跨部門個案，解決問題，如經介入後仍未解決部門之間的權責爭議，總署應果將問題提交至政府更高層次處理。</p>
-<p>現時阻街投訴主要依靠「1823」接收，公署指1823可轉介大部份個案予合適部門，但卻無權指令任何部門跟進涉及權責不清的個案，只能從中接收部門解釋。趙慧賢形容相關部門「各說各話、費時失事」，情況不理想。</p>
+<p>現時阻街投訴主要依靠「1823」接收，公署指「1823」可轉介大部份個案予合適部門，但卻無權指令任何部門跟進涉及權責不清的個案，只能從中接收部門解釋。趙慧賢形容相關部門「各說各話、費時失事」，情況不理想。</p>
+<p>民主黨認為，申訴專員報告揭示政府官僚作風、權責不清，要求地區民政專員擔當指揮及領導角色、民政事務總署制定指引釐清各政府部門權責。該黨又建議賦權食環署督察有需要時充公店鋪阻街的貨物，加重屢罰不改的店東阻街所需面對的後果。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/HEu2u97B8S" title="無標題"><img src="https://live.staticflickr.com/65535/52373507680_36a1ace348_b.jpg" width="1024" alt="無標題" /></a></p>
+<p>食環署表示，署方全數接納申訴專員的六項建議，正積極跟進。署方又稱，去年7月政府成立由政務司副司長領導的「地區事項統籌工作組」，其中一個工作重點正是打擊店鋪非法擴展營業範圍導致阻街。食環署與警方去年10月起在全港各區展開逾500次執法行動，獲地區人士正面評價，各區阻街情況已顯著改善。修例工作方面，環境及生態局已就提高阻街罰款金額完成公眾諮詢。</p>
+<p><strong>環保署：發泡膠箱重開隨與內地通關已復常</strong></p>
+<p>環保署就申訴專員公署就回收發泡膠箱能力，以及各區堆積發泡膠箱的內容作回應。署方指發泡膠箱重量輕但體積大，回收後只能製成少量塑膠原料，而廢物亦往往被污染或夾雜其他雜質，回收效益相對較低，故循環使用及從源頭減廢為優先處理方法。環保署提到，2022年初因疫情關係，運港的蔬菜水果發泡膠箱未能送返內地，食環署和漁護署聯絡了數間本地回收商，加大處理能力，由以往每日不足1公噸提升至12公噸，至今回收2,500公噸。隨兩地恢復正常通關，發泡膠箱已回復以往運回內地循環使用的安排。</p>
 </div></div></div>
