--- a/_posts/2023-02-16-INITIUM-李立峰-由公共服务广播到国家广播-从香港政府广播牌照中期检讨谈起.html
+++ b/_posts/2023-02-16-INITIUM-李立峰-由公共服务广播到国家广播-从香港政府广播牌照中期检讨谈起.html
@@ -9,7 +9,7 @@ author: 李立峰
 ---
 
 <p>「在今天的媒体生态中，利用面向大众的广播机构来进行促进国家融合和国民身分的工作，有效吗？」</p><p>特约撰稿人 李立峰 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230217-hongkong-public-service-broadcasting-national-orientation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/8a50bb1d0aba49aebee1a7e7ce45cdbb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年7月1日，金钟添马公园的户外巨型屏幕，播放著有关庆祝共产党成立100周年及香港回归纪念的影片。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2021年7月1日，金钟添马公园的户外巨型屏幕，播放著有关庆祝共产党成立100周年及香港回归纪念的影片。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><strong>（李立峰，香港中文大学新闻与传播学院院长）</strong></p>
+            <figcaption itemprop="caption">2021年7月1日，金钟添马公园的户外巨型屏幕，播放著有关庆祝共产党成立100周年及香港回归纪念的影片。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><strong>（李立峰，香港中文大学新闻与传播学院教授）</strong></p>
 <p>2023年2月14日，香港有两宗跟电视广播有关的重要新闻。</p>
 <p>首先，香港有线电视公布获准向香港政府交还本地收费电视牌照，其收费频道将于同年6月停播，免费电视服务则不受影响。其次，香港特区政府宣布接纳通讯事务局在免费电视节目及声音广播牌照中期检讨里提出的建议，包括免费电视台每周须播放至少30分钟有关国民教育、国民身分认同和正确认识港区国安法的节目。</p>
 <p>有线电视开台近30年，纵使近年经营困难，据传媒报道，当下有线收费电视仍然有数十万名用户，其停播决定自然引起了较大的即时回响。但若谈论对香港电视和电台广播发展的意义，通讯事务局提出关于广播牌照的建议，其重要性其实不比有线收费频道结业的重要性低。</p>
