--- a/_posts/2023-02-16-INMEDIA-蕭澤頤獲延任兩年-政府-便利警隊管理層順利交接.html
+++ b/_posts/2023-02-16-INMEDIA-蕭澤頤獲延任兩年-政府-便利警隊管理層順利交接.html
@@ -16,6 +16,6 @@ author: 獨媒報導
 <p><strong>袁旭健、劉賜蕙料同今年內退休  周一鳴或平調</strong></p>
 <p>警務處現任副處長（行動）袁旭健同為1966年出生，料今年內同達退休之齡，另一副處長（國家安全）劉賜蕙則為1965年出生。《明報》早前報導警隊今年的高層架構變動，引述消息人士指，劉賜蕙將在3月退休，由現任國家安全處處長簡啟恩接任，現任行動處處長陳俊燊則升任副處長（管理）。而被視為「未來一哥」、現年52歲的周一鳴，他將平調副處長（行動）一職。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/16t950sW33" title="無標題"><img src="https://live.staticflickr.com/65535/52688824498_447789a37f_b.jpg" width="1024" alt="無標題" /></a><br /><em>袁旭健、蕭澤頤、劉賜蕙、周一鳴</em></p>
-<p>多名警務處副處長近年在退休後均有「着落」，其中首名女性警務處副處長趙慧賢，她在2019年4月調任申訴專員，及後由郭蔭庶接任。郭蔭庶在去年4月退休，同年7月出任公務員學院院長。</p>
+<p>多名警務處副處長近年在退休後均有「着落」，其中首名女性警務處副處長趙慧賢，她在2019年4月調任申訴專員，及後由郭蔭庶接任副處長。郭蔭庶在去年4月退休，同年7月出任公務員學院院長。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/K4vMb53tB1" title="無標題"><img src="https://live.staticflickr.com/65535/52692248303_37134ae2c5_b.jpg" width="1024" alt="無標題" /></a><br /><em>趙慧賢</em></p>
 </div></div></div>
