--- a/_posts/2023-02-17-INMEDIA-西九法院下午疑火警鐘誤鳴-消防到場.html
+++ b/_posts/2023-02-17-INMEDIA-西九法院下午疑火警鐘誤鳴-消防到場.html
@@ -10,5 +10,5 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/west%201280_1.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>正進行初選案審訊的西九龍裁判法院今午疑火警鐘誤鳴。約下午2時，有消防車到達西九法院，不久後有數名消防員乘搭升降機往上層。據現場警方消息指法院的火警鐘誤鳴。</p>
 <p>期間法院電梯及升降機被封鎖，約一百人排隊等候，包括一眾初選案被告及律師，如黃碧雲、施德來及何啟明，另有多名警員在場戒備。約2時半，火警鐘再度響起數秒。數分鐘後消防員離開法院，消防車其後駛離。最後約2時50分，保安解封電梯予輪候的人分批進入。</p>
-<p>《獨媒》已就事件向司法機構查詢。</p>
+<p>司法機構回覆查詢指，今日下午1時57分，西九龍法院大樓A座響起火警鐘，消防人員到場後確認為警鐘誤鳴，並於2時13分解除警報。受影響法庭於下午3時左右陸續恢復運作。</p>
 </div></div></div>
