--- a/_posts/2023-02-17-INMEDIA-九巴43b改道致243m迫爆-建制派區會動議還原惟表決前撤回.html
+++ b/_posts/2023-02-17-INMEDIA-九巴43b改道致243m迫爆-建制派區會動議還原惟表決前撤回.html
@@ -30,5 +30,5 @@ author: 獨媒報導
 <p>動議人徐曉杰及和議人梁嘉銘，其後在會上要求撤回動議，徐曉杰稱「其實就係想話返畀運輸署同九巴聽，講返居民嘅訴求如果唔聽，我哋就會喺議會講，我諗個意思講得好清晰。」撤回動議最終在無反對下獲通過。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4G76i3b1r5" title="DSC_0602"><img src="https://live.staticflickr.com/65535/52691471872_a94949c24a_z.jpg" alt="DSC_0602" /></a></p>
 <p><strong>張文龍：建制派「不惜打倒昨天的我」</strong></p>
-<p>會後，<a href="https://www.facebook.com/manlungor/posts/pfbid09vRxtS5DMM8KofPiBmPkjKumx3HKgRqbrEz3VHwJb1sn83ULXnBoTcUFLF5VaKdUl">屬民主派、前葵青區議會副主席張文龍在社交媒體表示</a>，43B改道事件持續發酵，已嚴重至建制派區議員「不惜打倒昨天的我」，巴士公司增加243M班次。</p>
+<p>會後，<a href="https://www.facebook.com/manlungor/posts/pfbid09vRxtS5DMM8KofPiBmPkjKumx3HKgRqbrEz3VHwJb1sn83ULXnBoTcUFLF5VaKdUl">屬民主派、前葵青區議會副主席張文龍在社交媒體表示</a>，43B改道事件持續發酵，已嚴重至建制派區議員「不惜打倒昨天的我」，建議巴士公司增加243M班次。</p>
 </div></div></div>
