--- a/_posts/2023-02-18-INITIUM-女性主义的具体生活-给国二学生的回信-不论性向-喜欢是一种美好的情感.html
+++ b/_posts/2023-02-18-INITIUM-女性主义的具体生活-给国二学生的回信-不论性向-喜欢是一种美好的情感.html
@@ -10,7 +10,7 @@ author: 张书玮
 
 <p>「爱情是一种经历，无论是否真的可以拥有，它都只是让我们踏上不同人生的要素之一，不是全部。」</p><p>张书玮</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230218-opinion-letter-to-student/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/4af5cf7a72cd40e7b6bd17de9b540972.jpeg?imageView2/1/w/1080/h/715/format/jpg" alt="2012年3月，新加坡，一名男子站在一个发光的装置艺术前。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2012年3月，新加坡，一名男子站在一个发光的装置艺术前。<span class="credit">摄：Wong Maye-E/AP/达志影像</span></figcaption></figure><p><small>【编者按】：最近编辑部收到一封国二生（初二、中二）的来信，他说自己是男孩子，但觉得自己可能是同志，和另一个男生告白失败，并提出一个困惑：“同性恋难道真找不到喜欢对象吗?”</small></p>
-<p><small>编辑部看到这封来信后，想用“女性主义的具体生活”系列来分享我们的回答。在这个伤心的提问背后，是我们对自己的性向、爱情、自我肯定等的困惑，它也将是我们所有人都可能碰到的。</small></p>
+<p><small>编辑部看到这封来信后，想用<a href="https://theinitium.com/tags/_3505/">“女性主义的具体生活”</a>系列来分享我们的回答。在这个伤心的提问背后，是我们对自己的性向、爱情、自我肯定等的困惑，它也将是我们所有人都可能碰到的。</small></p>
 <p>同学你好，</p>
 <p>我们收到你的电邮，提到你做过我们的一个问卷，此前一直好奇自己是否同志，你向自己的同学告白，也有自己心底的烦恼和困惑。</p>
 <p>来信只有短短几行，但我好像可以透过这些字，察觉到你的生活容纳了不少的想法和思考，这些疑惑在你的脑海可能已有好一段时间，谢谢你对我们的信任，将这些想法讲了出来，也谢谢你对我们的期许，否则也不会向我们寻求答案。</p>
