--- a/_posts/2023-02-17-INITIUM-吕礼诗-中国气球-不对称-监侦模式渗透领空-台湾如何应对.html
+++ b/_posts/2023-02-17-INITIUM-吕礼诗-中国气球-不对称-监侦模式渗透领空-台湾如何应对.html
@@ -11,7 +11,7 @@ author: 吕礼诗
 <p>「中国为什么在占有太空的“新高地”后，还要退而求其次地回头应用这老掉牙的监侦方式？」</p><p>吕礼诗</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230218-opinion-china-spy-balloon/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/94b15102950743f090ffbf3bcfc92808.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月5日，南卡罗来纳州的美国领海，工作人员回收一个疑似中国监视气球，该气球在周末被美方击落。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2023年2月5日，南卡罗来纳州的美国领海，工作人员回收一个疑似中国监视气球，该气球在周末被美方击落。<span class="credit">摄：U.S. Fleet Forces/Reuters/达志影像</span></figcaption></figure><p><strong>（吕礼诗，新江军舰前舰长、东吴大学政治学系博士生）</strong></p>
 <p>2022年，中国完成天和核心舱与梦天实验舱、问天实验舱的对接合一，形成<a href="https://zh.wikipedia.org/zh-tw/%E5%A4%A9%E5%AE%AB%E7%A9%BA%E9%97%B4%E7%AB%99">天宫太空站</a>“T”字基本构型组合体；此为人类自1986年的和平号太空站、及1998年的国际太空站后，在近地轨道（Low Earth orbit）所建造的第三座大型在轨太空实验平台。不过，近期中国频繁出现在美国及加拿大领空的“<a href="https://theinitium.com/article/20230210-morning-brief/">气球</a>”，不禁令人疑惑，中国为什么在占有太空的“新高地”后，还要退而求其次地回头应用这老掉牙的监侦方式？</p>
-<p>从今年2月初迄今，美国及加拿大分别在南卡罗来纳州外海、阿拉斯加州、加拿大育空（Yukon）地区与美加边境的休伦湖（Lake Huron）等美国及加拿大领空发现中国“间谍气球”踪迹，后由美军出动F-22“猛禽”及F-16“战隼”）战机发射AIM-9X响尾蛇飞弹击落该四枚气球。</p>
+<p>从今年2月初迄今，美国及加拿大分别在南卡罗来纳州外海、阿拉斯加州、加拿大育空（Yukon）地区与美加边境的休伦湖（Lake Huron）等美国及加拿大领空<a href="https://zh.wikipedia.org/zh-tw/2023%E5%B9%B4%E4%B8%AD%E5%9B%BD%E9%AB%98%E7%A9%BA%E6%B0%94%E7%90%83%E4%BA%8B%E4%BB%B6">发现中国“间谍气球”踪迹</a>，后由美军出动F-22“猛禽”及F-16“战隼”）战机发射AIM-9X响尾蛇飞弹击落该四枚气球。</p>
 <p>其中最值得注意的是，1月28日进入阿拉斯加空域、经过了部署150座美军义勇兵三型（LGM-30G Minuteman-III）洲际弹道飞弹（ICBM）发射井（silo）的蒙大拿州（Montana）马尔姆斯特罗姆空军基地（Malmstrom AFB），最后飞越了大半个美国后，在南卡罗来纳州外海遭F-22击落的第一枚气球。</p>
  
  
