--- a/_posts/2023-02-18-INITIUM-垃圾-清洁工-废弃社会.html
+++ b/_posts/2023-02-18-INITIUM-垃圾-清洁工-废弃社会.html
@@ -9,7 +9,7 @@ author: 端传媒记者F
 ---
 
 <p>「我越来越意识到，这个世界被分割成两个部分，一个是被接受的，一个是被丢弃的。前一个世界越光鲜亮丽，后一个世界就越肮脏。」</p><p>端传媒记者F</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230219-roving-reporter-cleaning-lady/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/02/55fbfa2d71f84d56bb50796c30450dba.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年1月21日，中国浙江台州市的除夕夜，环卫工人正在清理街道。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年1月21日，中国浙江台州市的除夕夜，环卫工人正在清理街道。<span class="credit">摄：Wang Huabin/VCG via Getty Images</span></figcaption></figure><p><small>【编者按】<a href="https://theinitium.com/channel/roving-reporter">“不重磅记者自留地”</a>是端传媒新开设的专栏，由来自不同地区的记者轮值书写。这些故事也许并不重磅、也非必要，却是记者生涯中，让我们心痒难耐、不吐不快的片刻。我是本期值班的记者F，这篇自留地，我想写写我遇到的过的几位“环卫工人”。</small></p>
+            <figcaption itemprop="caption">2023年1月21日，中国浙江台州市的除夕夜，环卫工人正在清理街道。<span class="credit">摄：Wang Huabin/VCG via Getty Images</span></figcaption></figure><p><small>【编者按】<a href="https://theinitium.com/channel/roving-reporter">“不重磅记者自留地”</a>是端传媒新开设的专栏，由来自不同地区的记者轮值书写。这些故事也许并不重磅、也非必要，却是记者生涯中，让我们心痒难耐、不吐不快的片刻。我是本期值班的记者F，这篇自留地，我想写写我遇到过的几位“环卫工人”。</small></p>
 <p>1</p>
 <p>很多年前，我刚大学毕业，在本地一张报纸上班。那是一座没有新闻传统的城市，理所当然，我做的也是宣传工作。有时候，宣传部会给报社发一份名单，报社再让我按图索骥去采访，写人物小传。这些人就会入选本地类似于“感动中国”一样的名单。</p>
 <p>大部分时候，这样的工作不用太费心，因为上下都打点好了，社区的人会带你上门，被提名的“感动中国”人物不会觉得自己是被采访，而是会尽力配合“上面”的工作。总之大家心照不宣，运气好的时候，社区的人离开后，采访对象会开一瓶酒，跟我聊一下午政治八卦，傍晚回家，再写一个完全无关的正能量故事。</p>
