--- a/_posts/2023-02-19-PQ-巴拉圭總統大選將至-總統阿布鐸-若與台灣斷交將是歷史錯誤.html
+++ b/_posts/2023-02-19-PQ-巴拉圭總統大選將至-總統阿布鐸-若與台灣斷交將是歷史錯誤.html
@@ -14,7 +14,7 @@ author: 李 晏蓉
 <p>巴拉圭將於 4 月舉行總統大選，阿布鐸 18 日表示，他認為巴國總統大選並不會影響對台邦交，並直言，<strong>若任何人當選下屆總統後做出與台灣斷交的決定，將是一個歷史性的錯誤。</strong></p>
 </p>
 <div class="wp-block-image">
-<figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2.jpeg" alt="巴拉圭共和國總統阿布鐸於 2 月 14 日至 18 日率團來台進行訪問，成員包括外交部長阿里歐拉、工商部長賈斯迪優尼等重要官員／圖：中央社" class="wp-image-127734" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>巴拉圭共和國總統阿布鐸於 2 月 14 日至 18 日率團來台進行訪問，成員包括外交部長阿里歐拉、工商部長賈斯迪優尼等官員／圖：中央社</figcaption></figure>
+<figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2.jpeg" alt="巴拉圭共和國總統阿布鐸於 2 月 14 日至 18 日率團來台進行訪問，成員包括外交部長阿里歐拉、工商部長賈斯迪優尼等重要官員／圖：中央社" class="wp-image-127734" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fc380c2a-230219-2-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>巴拉圭共和國總統阿布鐸於 2 月 14 日至 18 日率團來台進行訪問，成員包括外交部長阿里歐拉、工商部長賈斯迪優尼等官員／圖：中央社</figcaption></figure>
 </div>
 <h2><strong>▌</strong>阿布鐸：台灣主權及國土完整性應受到尊重</h2>
 </p>
