Update VOCUS 2023-02-20 patch

--- a/_posts/2022-01-23-VOCUS-碧藍歷史-被日本全國寄與厚望的-瑞鶴號航空母艦.html
+++ b/_posts/2022-01-23-VOCUS-碧藍歷史-被日本全國寄與厚望的-瑞鶴號航空母艦.html
@@ -8,10 +8,8 @@ tags: blog
 author: Writing 生活玩家
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:3000px" class="image-block-prerender" data-src="https://images.vocus.cc/33d12315-d512-4296-9da9-018a2b8da161.jpg" data-width="3000" data-height="2000" data-position="center" src="https://images.vocus.cc/33d12315-d512-4296-9da9-018a2b8da161.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/33d12315-d512-4296-9da9-018a2b8da161.jpg" data-width="3000" data-height="2000" data-position="center" src="https://images.vocus.cc/33d12315-d512-4296-9da9-018a2b8da161.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">瑞鶴</span>（日語：<span style="font-weight: bold; ">瑞鶴</span>：ずいかく）<span style="font-weight: bold; ">號航空母艦</span>是日本海軍的大型航空母艦。翔鶴級航空母艦的二號艦。艦名中的「瑞」是吉祥的意思，「鶴」在日本是長壽的象徵，來源於一種美麗的鳥類。</div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-epaev">建造歷史</h3>
 <div class="draft-block draft--p left">日本在1936年退出第二次倫敦海軍條約後。開始積極擴張海軍戰力，並於1937年日本海軍的03造艦補充計劃中撥款建造兩艘翔鶴級航空母艦，每艘航母建造經費為8449萬日元。翔鶴級可說是是蒼龍號航母的擴大改進型，其艦艏、機庫、煙囪等構造均一脈相承，標準排水量從17300噸提高到25675噸。在內部，「翔鶴」級運用了大量的全新設計。動力系統方面，該級艦首先搭載跟大和級戰列艦同型號的艦本式重油專燒鍋爐，最大出力從「蒼龍」級的152000匹馬力提升到160000匹馬力，超過大和級戰列艦，而她還加裝防護裝甲，飛行甲板長242米，設雙層機庫，3部升降機，艦上沒有裝備彈射器，具有日本特色的向下彎曲的橫臥式煙囪位於艦體右舷中部。由於先前將島式艦橋置於艦體左舷的設計並不實用，兩艦島式艦橋統一設在艦體右舷。翔鶴級可稱為當時設計最優秀的航空母艦之一。</div>
 <div class="draft-block draft--p left">同時，該級艦也是首級裝備球鼻艏、減輕興波阻力的日本航母。經過這些改進，雙鶴在排水量增加過半、發動機功率大致相當的前提下，達到了跟「蒼龍」級一樣的34節航速，堪稱了不起的技術成就。此外，在18節航速下，該級艦的續航距離比「蒼龍」級提升了30%，達到了9700海里之多。最後，得益於更大的排水量，「翔鶴」級的載機量從「蒼龍」級的73架提升到84架。在開戰之初，「翔鶴」、「瑞鶴」兩姐妹可以說是當時日本海軍最好的航母，有「理想型航母」之稱。</div>
@@ -20,15 +18,13 @@ author: Writing 生活玩家
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">竣工時</span><br>8座二連裝12.7厘米40倍口徑高射炮<br>20座三連裝25毫米機槍<br><span style="font-weight: bold; ">最終時</span><br>8座二連裝12.7厘米40倍口徑高射炮<br>20座三連裝25毫米機槍<br>36挺單裝25毫米機槍<br>8門12cm28連裝噴進砲</div>
 <h3 class="draft-block draft--h3" name="header-6iii7">艦載機</h3>
 <div class="draft-block draft--p left">標準72架、備用12架<br><span style="font-weight: bold; ">（1941年12月）</span><br>零式艦載戰鬥機18架<br>99式艦載轟炸機27架<br>97式艦載攻擊機27架<br><span style="font-weight: bold; ">最終時</span><br>零式戰鬥機28架<br>零式戰鬥機（戰鬥轟炸型）16架<br>彗星艦載轟炸機11架<br>天山艦載攻擊機14架</div>
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:3736px" class="image-block-prerender" data-src="https://images.vocus.cc/594d07fe-118e-49c1-90db-7701c2c3739a.jpg" data-width="3736" data-height="2123" data-position="center" src="https://images.vocus.cc/594d07fe-118e-49c1-90db-7701c2c3739a.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/594d07fe-118e-49c1-90db-7701c2c3739a.jpg" data-width="3736" data-height="2123" data-position="center" src="https://images.vocus.cc/594d07fe-118e-49c1-90db-7701c2c3739a.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <h3 class="draft-block draft--h3" name="header-5l32a">戰鬥歷史</h3>
 <div class="draft-block draft--p left">1941年兩艘翔鶴級編入第五航空戰隊，首次作戰任務是參加偷襲珍珠港；此役瑞鶴出動了58架艦載機，從千島列島的單冠灣出航，戰役後並無任何損失，隨後1942年1月20日前往印尼參加拉包爾進攻作戰，並於1月21日對紐幾內亞萊城發動空襲。</div>
 <div class="draft-block draft--p left">於1942年4月發動印度洋海戰並重創於印度的英國海軍，一個月後1942年5月8日珊瑚海海戰中，「翔鶴」號和「瑞鶴」號共同起飛艦載機並成功擊沉了列星頓號航空母艦和重創約克鎮號。但是在同一時間美軍也派出戰機出現在日本航艦上空，但因等候速度較為慢的魚雷機而沒立即發動空襲，此時艦長橫川市平大佐進行巧妙的轉進，使「瑞鶴」號躲進熱帶暴風之下並在之後的空襲中毫髮無傷，而美軍只發現同型樣貌的「翔鶴」號進而發起攻擊，翔鶴遭到兩顆炸彈命中受損，替妹妹瑞鶴揹了黑鍋，雖然瑞鶴號在此戰役中逃過美軍空襲，但是派出去的艦載機與飛行員損失也過半。因此兩艦沒有參加1942年6月的中途島海戰，然而在中途島海戰日本海軍損失四艘大型航空母艦，翔鶴級兩艦成為日本海軍僅剩的大型航艦，因此負擔更沉重的作戰壓力，而在中途島後由於航艦的損失，第五航空戰隊遭到撤裁，兩艘翔鶴級轉調至第一航空戰隊。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/728f8bfb-eb05-4264-8031-09e00e22d8c8.png" data-width="2048" data-height="1536" data-position="center" src="https://images.vocus.cc/728f8bfb-eb05-4264-8031-09e00e22d8c8.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">碧藍航線裡的瑞鶴</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/728f8bfb-eb05-4264-8031-09e00e22d8c8.png" data-width="2048" data-height="1536" data-position="center" src="https://images.vocus.cc/728f8bfb-eb05-4264-8031-09e00e22d8c8.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">碧藍航線裡的瑞鶴</figcaption></div></figure>
 <div class="draft-block draft--p left">1942年10月26日南太平洋海戰中，與翔鶴號一同參戰，並兩度擊傷美軍「企業」號，並成功擊毀「大黃蜂」號航空母艦，但「翔鶴」號又再次替妹妹受損，瑞鶴毫髮無傷。</div>
 <div class="draft-block draft--p left">1944年6月19日菲律賓海戰中，「翔鶴」、「瑞鶴」與新入役的「大鳳」號航空母艦一起參加了馬里亞納海空大戰。在此戰之前，日軍精心計劃了穿梭轟炸計劃，讓艦載機來回於島嶼和航母之間襲擊美軍艦隊。但是，因為大批新手飛行員缺乏經驗，再加上裝備的差距明顯，這場戰鬥變成了美軍的射火雞大賽，日軍戰機被毫不留情地逐一屠滅。</div>
 <div class="draft-block draft--p left">接下來，因為日軍反潛力量的薄弱，「翔鶴」號和「大鳳」號相繼遭到美軍潛艇襲擊而沉沒。作為姐姐的「翔鶴」最後一次為妹妹背鍋，「翔鶴」號因而命中4枚魚雷沉沒。</div>
 <div class="draft-block draft--p left">1944年10月25日雷伊泰灣海戰，「瑞鶴」號被編入第3航空戰隊中負責引誘美軍航空母艦特混編隊北上，在美軍艦載戰機波狀攻擊之下，身中7枚炸彈和7枚魚雷，艦體向左大幅傾斜，經過大力搶救後仍於下午2時發佈全員離艦命令。15分鐘後，「瑞鶴」號即發生大爆炸而沉沒至海底，於1945年8月26日，除籍。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">（部分資料來源來自於網路資訊）</div>
