--- a/_posts/2023-02-15-VOCUS-關於我和鬼變成家人的那件事-電影男同也能很不政確.html
+++ b/_posts/2023-02-15-VOCUS-關於我和鬼變成家人的那件事-電影男同也能很不政確.html
@@ -54,4 +54,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">但是這部電影還是有讓人遺憾的部分，雖然在笑點和溫馨家庭情感部分呈現得到，但多半都是以男同志毛毛的家庭為主，這也是本部片很大一塊缺少的部分就是關於直男警察吳明翰的人格和人物背景的塑造在整部電影是看不出來的，只能單薄的了解他有點恐同和想破案立大功，並且幫助毛毛，但對於「吳明翰是個怎樣的人？」沒有任何交代，這讓這位主角不是很立體，整體來說太像戀愛遊戲讓玩家戴入無臉主人翁。</div>
 <div class="draft-block draft--p left">而且雖然有大量的動作場景，像是飛車追逐、警匪槍戰和對打戲，但整體而言反而是呈現最差的地方，雖然想以搞笑的方式帶過，但這裡要兼顧動作戲和笑點的部分，很明顯導演還未把持好這一塊。</div>
 <div class="draft-block draft--p left">整部電影因為太多面向讓故事必須分直男警察和鬼同志兩條線跑，雖然有交集點但做的並不巧妙，如果可以兼顧懸疑感的話會較佳，電影只看到幽默並沒有黑色詼諧的成分。但整體來講《關於我和鬼變成家人的那件事》也算是不錯的爆米花電影，至少在娛樂上我覺得他沒有濫用太多政確，反而成為電影正確的選擇。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/01x0ciUX0y4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/01x0ciUX0y4"></iframe></div>
