--- a/_posts/2023-02-19-VOCUS-追海豚的長崎夏日-朋友-一瞬永遠.html
+++ b/_posts/2023-02-19-VOCUS-追海豚的長崎夏日-朋友-一瞬永遠.html
@@ -53,4 +53,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">電影雖然只有一小時半，卻讓人覺得步調太過緩慢甚至在鏡頭運鏡安排上不是很好，有一些呈現的比較像是動畫風格，或網路素人自拍劇那種低成本的感覺，但有些情感運鏡也還不錯，導致觀影的落差感有點大，忽高忽低的很讓人出戲，但少年冒險部分還滿有趣，有把現實感拍出來，但又帶點童趣的無奈感，是整部片最有看點的部分。</div>
 <div class="draft-block draft--p left">在日本網路上給予這部原創電影不錯的評價，雖然許多觀眾表示很感動，但有很多其實都是因為看見自己小時候的回憶，而有所共鳴。簡單來說《追海豚的長崎夏日》本質上是打懷舊牌，並用少年物語去包裝，而得到同樣一個時代人的共情。</div>
 <div class="draft-block draft--p left">也有許多人認為這是一部太過鄉愁的電影，且拿掉情懷就什麼都沒有的作品，這點其實反映在台灣影廳上，並不是所有的人都會惆悵長崎的海，對我來講想到長崎可能「長崎蛋糕」俗氣的想像更多一些，無法共情。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/LY28pFz-Ruc"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/LY28pFz-Ruc"></iframe></div>
